# ledmatrix-counter-embarca

./: CMakeLists.txt  README.md
include/: button.h
src/: main.c
wokwi/: diagram.json  wokwi.toml
